Fix awkward checkbox wrapping.

--- a/client/src/components/NumberInput/NumberInput.scss
+++ b/client/src/components/NumberInput/NumberInput.scss
@@ -10,6 +10,7 @@
         position: relative;
         display: block;
         height: 100%;
+        min-width: 6rem;
     }
 
     &-buttons {
