--- a/client/src/pages/AdvancedSearch/AdvancedSearch.scss
+++ b/client/src/pages/AdvancedSearch/AdvancedSearch.scss
@@ -59,7 +59,7 @@
         width: auto;
         margin-right: 1rem;
 
-        @media only screen and (max-width: 52.125em) {
+        @media only screen and (max-width: 75em) {
             &:not(:first-child) {
                 margin-top: 0.5rem;
             }
